# py-pkglite

./: .gitignore  404.html  CHANGELOG.md  LICENSE  LICENSES_THIRD_PARTY  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: ci-tests.yml  docs.yml
articles/design/: index.html
articles/get-started/: index.html
changelog/: index.html
docs/: changelog.md  index.md
docs/articles/: design.md  get-started.md  get-started.qmd
docs/reference/: classify.md  pack.md  unpack.md  use.md
docs/scripts/: logo.R  sync.sh
docs/stylesheets/: extra.css
examples/: get-started.py
reference/classify/: index.html
reference/pack/: index.html
reference/unpack/: index.html
reference/use/: index.html
search/: search_index.json
src/pkglite/: classify.py  main.py  pack.py  unpack.py  use.py
stylesheets/: extra.css
tests/: test_main.py  test_pack.py  test_unpack.py  test_use.py
