[project]
name = "pkglite"
version = "0.1.0"
description = "pkglite for Python"
authors = [
    { name = "Nan Xiao", email = "nan.xiao1@msd.com" }
]
dependencies = [
    "gitignore-parser>=0.1.11",
    "rich>=13.9.4",
    "typer>=0.12.5",
]
readme = "README.md"

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Information Technology",

  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Archiving :: Packaging",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

requires-python = ">= 3.10"

[project.scripts]
pkglite = "pkglite.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pkglite"]
